--- a/main.css
+++ b/main.css
@@ -3,7 +3,9 @@
     height: 100px;
     position: relative;
     width: 100px;
+    border-radius: 100%;
   }
+  
   .face {
     font-family: 'courier new', serif;
     font-size: 2.5em;
